# git_practice_10_2024

./: pyproject.toml
src/: main.py  names.txt
